Fix - page layout cutoff issue6

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -348,7 +348,7 @@
 
 
 .pg2-plot-lgeo {
-  /* width: 90%; */
+  width: 95%;
   display: block;
   padding-top: 1%;
 }
